@@ -7,7 +7,7 @@ Pick new default port, 8080 is too common
 Pass different port number in ARGV
 Have a generic error page, and push all errors to it
 Fix links in POD to go back to us
-Fix package links to go to a best-guess filename
+
 
 
 Maybe use LWP::Online and gravatar? 
